move make_js_world.cpp change the directory for the cpp files

--- a/make_js_world/Makefile
+++ b/make_js_world/Makefile
@@ -11,7 +11,7 @@ LDFLAGS 	=	$(OPENMP)
 CXXFLAGS	+=	-Wall $(OPENMP) $(OPTFLAGS)
 
 clean:
-	rm -r sphray.new sphray.bvh glesray1 *.o ../js/*.js
+	rm -r sphray.new sphray.bvh glesray1 *.o ../js/*.js make_js_world
 
 web_models: make_js_world caffeine.js sphereflake.js dna.js tbv.js inits.js one.js large-bearing.js sortingpump.js gears.js
 
